Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,29 @@
 
     <section class="main-content">
       <h3>
-<a id="digit-analyzes" class="anchor" href="#digit-analyzes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Digit Analyzes</h3>
+<a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>The overall purpose of our project is to convert handwriting characters into digital text.</p>
+<p>Introduction in progress</p>
+
+<h3>
+<a id="background" class="anchor" href="#background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Background</h3>
+
+<p>So far our group has researched Image Thresholding, Connect Component Labeling, and a Neural Networks.  After our research we each individually looked up online code to gain a feeling and understand of how these components would be implemented. After finding online code, we then each attempted to get the code running on our laptops, we verified with other members of the group if we were having trouble getting the code to work and now we have worked out all issues and now we currently have code running for each component.  Now that we have some understanding we will now look into how we can tailor each of these individual components so that they can work in unison so that handwriting recognition can be implemented.  So currently we will be looking at the most optimal solution as to how was can use the code we found online so that all components can work together.</p>
+
+<h3>
+<a id="progress" class="anchor" href="#progress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Progress</h3>
+
+<p>Aug 31st – Sep 4th: During this week, we chose our team members, and started to discuss what topics we were interested in tackling for our project. Since there are four members in our group, we each came up with one topic, and one together to have 5 overall to choose from.  </p>
+
+<p>Sep 7th – 11th: During this week, we started to discuss which project we would all agree upon doing. We all agreed on doing a hand writing recognizer neural network. However, after we decided on that, we changed our topic because we thought it would not be a sufficient amount of time to finish the project in one semester. The new project was going to be a tutoring connecting website.  We proposed this new idea to Prof. Kim, but he insisted that we stick with the Neural Network, and that it would be able to get done in the timeframe permitted. With that reassurance, we officially settled on our project being the “Digital Analyzer.”</p>
+
+<p>Sep 14th  - 18th:  During this week, we did a large amount of on the topic we were tackling. We got a glimpse into how the actual network worked. Also, we met with Prof. Kim and he told us about a few classes that we would need in order to break down images, and use those bit to work with our neural network.  So, after that we started searching around for source code for our project, and also decided on using Java as our developing language. </p>
+
+<p>Sep 21st  - 25th: During this week, we found sample source code for our Image Thresholding, Connected Component, and neural network. After that, we had to actually get the code compiled, documented, and running. So, for the majority of the week we worked on that.</p>
+
+<p>Sep 28th  – Oct 2nd: During this week, we finally got all of our separate classes working, and doing what they were actually met to do. We ran into several problems when trying to compile the classes, but eventually got them working properly. We then started to feed these classes sample data to make sure that they would function properly on whatever data we decided to feed it. </p>
+
+<p>Oct 5th – 9th:  This week will be used to present our progress so far to our professor, and fellow classmates, and to also discuss the next steps that are needed to progress our project.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abubakarm94/Digital-Analyzer">Digital Analyzer</a> is maintained by <a href="https://github.com/abubakarm94">abubakarm94</a>.</span>
