Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>Introduction in progress</p>
+<p>The goal of our project is to convert handwritten characters into digital text. The bulk of the work is done through a neural network that allows the computer to learn various samples from persistent training. In doing this, we are trying to figure out the best way to implement a neural network that would work analogous with programs dealing with image thresholding and connected components. Due to the time constraint ahead of us, we are also trying to figure out the fastest way to implement this. We chose this project because originally we wanted to do something with deep learning. We were very fascinated with the way that various companies such as Facebook have been able to do things concerning this topic and thus decided to do something similar to this.</p>
 
 <h3>
 <a id="background" class="anchor" href="#background" aria-hidden="true"><span class="octicon octicon-link"></span></a>Background</h3>
