Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
 <p>Oct 5th – 9th:  This week will be used to present our progress so far to our professor, and fellow classmates, and to also discuss the next steps that are needed to progress our project.</p>
 
+<p>Oct 12th - 16th: Our code for Image threshold was merged with the code for finding connected components in order to make it work hand in hand.</p>
+
+<p>Oct 19th - 23rd: Sections of the image that are found through connected component analyses is that returnable as a unique image. We believe that this is crucial for when we to pass each section to the Neural Network.</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abubakarm94/Digital-Analyzer">Digital Analyzer</a> is maintained by <a href="https://github.com/abubakarm94">abubakarm94</a>.</span>
 
