Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
 <p>Oct 19th - 23rd: Sections of the image that are found through connected component analyses is that returnable as a unique image. We believe that this is crucial for when we to pass each section to the Neural Network.</p>
 
+<p>Oct 26 – Oct 30: Get the connected component and image segmentation to work in unison. Did testing to make sure that the results were coming out as expected and that there were no compilation errors or unexpected results</p>
+
+<p>Nov 4 – Nov 7: Worked on getting the MNIST database to train our computer for the Neural Network. The MNIST database is a database of handwritten digits and contains a training set of 60,000 examples and a test set of 10,000 examples.</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abubakarm94/Digital-Analyzer">Digital Analyzer</a> is maintained by <a href="https://github.com/abubakarm94">abubakarm94</a>.</span>
 
