--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
 <p>Nov 4 – Nov 7: Worked on getting the MNIST database to train our computer for the Neural Network. The MNIST database is a database of handwritten digits and contains a training set of 60,000 examples and a test set of 10,000 examples.</p>
 
+<p>Nov 9 - Nov 12: Successfully implemented a neural network that can be trained using the MNIST database. After training the neural network, the neural network object was persisted to a file to allow for future work to be done on the neural network. Furthermore, we also implemented a graphical component for our project. User can now import images handwriting digits to the neural network or physically write down digits on the provided canvas. Currently, the neural network has problems identifying 1,7,and 9s. We believe that this problem might be resulting from how we are converting the images to arrays of 0s and 255s, further analysis needs to be performed. </p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abubakarm94/Digital-Analyzer">Digital Analyzer</a> is maintained by <a href="https://github.com/abubakarm94">abubakarm94</a>.</span>
 
