Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 
 <p>Nov 16 - Nov 20: Fixed the issue where the Neural Network wasn't recognizing some digits. Furthermore, we included the ability to add multiple close-able views into a Tab Pane.</p>
 
+<p>Nov 22 - Nov 27: Fix the bug that disallows the neural network from recognizing 1s,7s, and 9s. Finishing touches was made to the GUI.</p>
+
+<p>Nov 30 - Dec 4: Began writing the paper, and working on the poster.</p>
+
+<p>Dec 7 - Dec 11: Performed Quality Assurance analyses on the tool as we get ready for our senior poster presentation.</p>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abubakarm94/Digital-Analyzer">Digital Analyzer</a> is maintained by <a href="https://github.com/abubakarm94">abubakarm94</a>.</span>
 
